--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="robots" content="index, follow">
-	<meta name="theme-color" content="#e3e3e3">
-	<meta name="apple-mobile-web-app-status-bar-style" content="#e3e3e3">
+	<meta name="theme-color" content="#f3c9dd">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#f3c9dd">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="CJ Patoilo">
